# lv

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h
demos/: CMakeLists.txt
demos/analog_clock/: analog_clock.hpp  main.cpp
demos/ebike/: ebike_demo.hpp  ebike_home.hpp  ebike_private.hpp  ebike_settings.hpp  ebike_stats.hpp  main.cpp
demos/ebike/translations/: lv_i18n.c  lv_i18n.h
demos/smartwatch/: main.cpp  smartwatch_control.hpp  smartwatch_demo.hpp  smartwatch_gestures.hpp  smartwatch_health.hpp  smartwatch_music.hpp  smartwatch_private.hpp  smartwatch_sports.hpp  smartwatch_weather.hpp
docs/: ARCHITECTURE.md  CPP_API_GUIDE.md  DESIGN_OBJECTVIEW_GETTERS.md  MIGRATION_FROM_LVGLPP.md  NAMING_CONVENTIONS.md
examples/: CMakeLists.txt  animation.cpp  canvas_draw.cpp  chart.cpp  counter.cpp  form.cpp  fragment_demo.cpp  gradient.cpp  grid_demo.cpp  hello.cpp  image_decoder_demo.cpp  lottie_demo.cpp  navigation.cpp  settings.cpp  svg_demo.cpp  texture3d_demo.cpp  translation_demo.cpp  vector_graphics.cpp
include/lv/: lv.hpp
include/lv/core/: anim.hpp  async.hpp  color.hpp  component.hpp  constants.hpp  display.hpp  event.hpp  focus.hpp  font.hpp  font_loader.hpp  image.hpp  indev.hpp  log.hpp  object.hpp  screen.hpp  snapshot.hpp  state.hpp  style.hpp  theme.hpp  timer.hpp  translation.hpp  verify.hpp  wrap.hpp
include/lv/draw/: draw.hpp  image_decoder.hpp
include/lv/layout/: flex.hpp  grid.hpp
include/lv/libs/: barcode.hpp  gif.hpp  gltf.hpp  qrcode.hpp
include/lv/others/: fragment.hpp
include/lv/widgets/: animimage.hpp  arc.hpp  arclabel.hpp  bar.hpp  box.hpp  button.hpp  buttonmatrix.hpp  calendar.hpp  canvas.hpp  chart.hpp  checkbox.hpp  dropdown.hpp  file_explorer.hpp  image.hpp  imagebutton.hpp  ime_pinyin.hpp  keyboard.hpp  label.hpp  led.hpp  line.hpp  list.hpp  menu.hpp  msgbox.hpp  roller.hpp  scale.hpp  slider.hpp  span.hpp  spinbox.hpp  spinner.hpp  switch.hpp  table.hpp  tabview.hpp  textarea.hpp  texture3d.hpp  tileview.hpp  win.hpp
scripts/: check_api_coverage.sh
tests/: CMakeLists.txt  api_smoke_test.cpp  zero_cost_test.cpp
zephyr/: Kconfig  module.yml
